login -> auth url change

--- a/app/views/login/canvas/_new_login_content.html.erb
+++ b/app/views/login/canvas/_new_login_content.html.erb
@@ -91,7 +91,7 @@
             </div>
             <div class="ic-Form-control ic-Form-control--login">
               <div class="ic-Login__actions">
-                <%= link_to t('back_to_login', "Back to Login"), login_path, :class => "ic-Login__actions--left ic-Login__link login_link"%>
+                <%= link_to t('back_to_login', "Back to Login"), auth_path, :class => "ic-Login__actions--left ic-Login__link login_link"%>
                 <button type="<%= forgot_password_btn_type %>" class="Button Button--login">
                   <%= t('buttons.request_password', 'Request Password') %>
                 </button>
