--- a/app/views/login/logout_landing.html.erb
+++ b/app/views/login/logout_landing.html.erb
@@ -37,7 +37,7 @@
             <%= t 'You are logged out of Canvas.' %>
           </p>
           <div class="ic-Login__actions">
-            <%= link_to(t("Click here to log in again"), login_url, :class => "ic-Login__link") %>
+            <%= link_to(t("Click here to log in again"), auth_url, :class => "ic-Login__link") %>
           </div>
         </div> <!-- end ic-Login__body -->
       </div> <!-- end ic-Login__innerContent -->
