--- a/app/views/login/new.html.erb
+++ b/app/views/login/new.html.erb
@@ -30,7 +30,7 @@
       <%= flash[:delegated_message] %>
     </p>
     <p>
-      <%= t "You can try to *log in again*.", wrapper: link_to('\1', login_url) %>
+      <%= t "You can try to *log in again*.", wrapper: link_to('\1', auth_url) %>
     </p>
   </div>
 </div>
