--- a/app/views/shared/_new_nav_header.html.erb
+++ b/app/views/shared/_new_nav_header.html.erb
@@ -43,7 +43,7 @@
             </li>
           <% else %>
             <li class="menu-item ic-app-header__menu-list-item">
-              <a id="global_nav_login_link" href="/login" class="ic-app-header__menu-list-link">
+              <a id="global_nav_login_link" href="/auth" class="ic-app-header__menu-list-link">
                 <div class="menu-item-icon-container" aria-hidden="true">
                   <%= render(:partial => "shared/svg/svg_login_new_styles.svg") %>
                 </div>
