--- a/app/views/login/canvas/_sso_buttons.html.erb
+++ b/app/views/login/canvas/_sso_buttons.html.erb
@@ -22,7 +22,7 @@
       <% aacs.each do |aac| %>
         <% only_one = aacs.size < 2 %>
         <li class="ic-Login__sso-list__item">
-          <a href="/login/<%= aac.auth_type %>"
+          <a href="/auth/<%= aac.auth_type %>"
              class="Button Button--primary <%= only_one ? 'ic-Login__sso-button--has-text ' : '' %>ic-Login__sso-button ic-Login__sso-button--<%= aac.auth_type %>">
               <%= render partial: "shared/auth_type_icon",
                          locals: {
