--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -206,7 +206,7 @@
   <% if p.first? || p.account_id %>
   <tr id="pseudonym_<%= p.id %>" class="pseudonym">
     <td><%= p.account.name %></td>
-    <td><a href="<%= login_url(:host => HostUrl.context_host(p.account)) %>" class="not_external"><%= p.unique_id %></a></td>
+    <td><a href="<%= auth_url(:host => HostUrl.context_host(p.account)) %>" class="not_external"><%= p.unique_id %></a></td>
     <td>
       <a class="delete_pseudonym_link no-hover" href="<%= profile_pseudonym_url(p.id) %>" style="<%= hidden unless can_do(p, @current_user, :delete) %>" title="<%= t('titles.remove_account_from_profile', "Remove account from this profile") %>"><%= image_tag "delete.png", :alt => t('Remove account from this profile') %></a>
     </td>
